[tool.poetry]
name = "rl"
version = "0.1.0"
description = "Reinforcement learning educational work"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.66.5"
argparse = "^1.4.0"
matplotlib = "^3.9.1.post1"
black = "^24.8.0"
numpy = "^2.0.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
